[project]
name = "PACKAGE_NAME"
version = "0.0.1"
authors = [
  { name="Danilo Montes", email="danilo.montes101@gmail.com" },
]
description = "PACKAGE_DESCRIPTION"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "None"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "URL"
Issues = "URL"